made some changes

--- a/pages/atliq.html
+++ b/pages/atliq.html
@@ -21,7 +21,7 @@
         <div class="project-detail-header">
             <button class="close-button">&times;</button>
             <div class="project-detail-image">
-                <img src="../assets/project_images/atliq.webp" alt="AtliQ Mart Analysis">
+                <img class="responsive-image" src="../assets/project_images/atliq.webp" alt="AtliQ Mart Analysis">
             </div>
             <h1 class="project-detail-title">AtliQ Mart Analysis</h1>
         </div>
@@ -107,6 +107,7 @@
         </div>
     </div>
     
+    <script src="../assets/js/project-images.js"></script>    
     <script src="../assets/js/project_pages.js"></script>
 </body>
 </html>
