--- a/pages/codex.html
+++ b/pages/codex.html
@@ -21,7 +21,7 @@
         <div class="project-detail-header">
             <button class="close-button">&times;</button>
             <div class="project-detail-image">
-                <img src="../assets/project_images/codex.jpeg" alt="CodeX Energy Drink">
+                <img class="responsive-image" src="../assets/project_images/codex.jpeg" alt="CodeX Energy Drink">
             </div>
             <h1 class="project-detail-title">CodeX: Data-Driven Beverage Insights</h1>
         </div>
@@ -108,6 +108,7 @@
         </div>
     </div>
     
+    <script src="../assets/js/project-images.js"></script>    
     <script src="../assets/js/project_pages.js"></script>
 </body>
 </html>
