made some changes

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     <div class="education-entry">
                         <h4 class="education-degree">Master of Science in Data Science</h4>
                         <p class="education-institution">Thakur College of Science and Commerce</p>
-                        <p class="education-date">2023 - 2025</p>
+                        <p class="education-date">2023 - 2025&nbsp;&nbsp;&nbsp;<a class="education-score"><strong>CGPA: </strong>7.9</a></p>
                     </div>
                     <div class="education-entry">
                         <h4 class="education-degree">Bachelor of Science in Computer Science</h4>
                         <p class="education-institution">Thakur College of Science and Commerce</p>
-                        <p class="education-date">2020 - 2023</p>
+                        <p class="education-date">2020 - 2023&nbsp;&nbsp;&nbsp;<a class="education-score"><strong>CGPA: </strong>8.31</a></p>
                     </div>
                 </div>
             </div>
@@ -86,8 +86,7 @@
             <!-- Experience Content (commented out as requested) -->
             <div id="experience-content" class="toggle-content">
                 <div class="experience-card">
-                    <!-- 
-                    <div class="experience-entry">
+                    <!-- <div class="experience-entry">
                         <h4 class="experience-title">Software Developer Intern</h4>
                         <p class="experience-company">Tech Solutions Inc.</p>
                         <p class="experience-date">June 2022 - August 2022</p>
@@ -98,8 +97,7 @@
                         <p class="experience-company">University Research Lab</p>
                         <p class="experience-date">January 2023 - May 2023</p>
                         <p class="experience-description">Conducted data analysis and visualization for research projects. Implemented machine learning algorithms for predictive modeling.</p>
-                    </div>
-                    -->
+                    </div> -->
                     <div class="experience-placeholder">
                         <p>Work experience section will be available soon.</p>
                     </div>
@@ -306,10 +304,10 @@
                             <span class="project-tag">Vector Search</span>
                             <span class="project-tag">Document Analysis</span>
                             <span class="project-tag">OCR</span>
-                            <span class="project-tag">Prompt Techniques</span>
-                            <span class="project-tag">Artificial Intelligence</span>
-                            <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">NLP</span>
+                            <span class="project-tag">Prompt Engineering</span>
+                            <span class="project-tag">CUDA</span>
+                            <span class="project-tag">Parameter Optimization</span>
+                            <span class="project-tag">WebSockets</span>                            
                         </div>
                         <p>A sophisticated <span class="fw-semi-bold">PDF document analysis and question-answering application</span> that leverages advanced AI models to provide detailed responses to user queries about PDF documents.</p>
                         <div class="project-buttons">
@@ -353,6 +351,7 @@
                             <span class="project-tag">Water Quality Analysis</span>
                             <span class="project-tag">IoT Integration</span>
                             <span class="project-tag">API Integration</span>
+                            <span class="project-tag">RestAPI</span>
                         </div>
                         <p>A Django-based water quality prediction system using multiple machine learning models that provides parameter assessment and treatment suggestions through both manual input and IoT sensor integration.</p>
                         <div class="project-buttons">
@@ -376,8 +375,7 @@
                             <span class="project-tag">Plagiarism Detection</span>
                             <span class="project-tag">NLP</span>
                             <span class="project-tag">Text Analysis</span>
-                            <!-- <span class="project-tag">Python</span>
-                            <span class="project-tag">Google Search API</span>
+                            <!-- <span class="project-tag">Google Search API</span>
                             <span class="project-tag">KMP Algorithm</span> -->
                         </div>
                         <p>A web-based tool that detects plagiarism by comparing text against internet sources and between files using Python and the KMP algorithm.</p>
@@ -405,18 +403,18 @@
                 <!-- Research Paper 1 -->
                 <div class="research-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="research-content">
-                        <h3 class="research-title">NLP-Based Toxic Comment Analysis</h3>
+                        <h3 class="research-title">Water Quality Predictions: Manual vs IoT Based Approaches</h3>
                         <p class="research-journal"><img src="assets/icons/research-paper.svg" class="journal-icon" alt="Research Journal"> IJSRED, March 2025</p>
-                        <a href="#" class="btn btn-secondary">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://drive.google.com/file/d/12zIZNntu3mJBFylcG0bRRAm1NQyaTa8-/view" class="btn btn-secondary">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
                 <!-- Research Paper 2 -->
                 <div class="research-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="research-content">
-                        <h3 class="research-title">ML-Based Stock Price Analysis</h3>
+                        <h3 class="research-title">Financial Analysis for Stock Pricing Using Machine Learning Algorithm</h3>
                         <p class="research-journal"><img src="assets/icons/research-paper.svg" class="journal-icon" alt="Research Journal"> IJSRED, March 2024</p>
-                        <a href="https://drive.google.com/file/d/1R6C2bjbdmmPeKAnw_DeYteGcKBxHtTYE" class="btn btn-secondary">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://drive.google.com/file/d/1_BllU8Ihph4oYz91p4uNKwJacWzob4-M/view" class="btn btn-secondary">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
