--- a/pages/beast_projects.html
+++ b/pages/beast_projects.html
@@ -76,13 +76,12 @@
                     <div class="project-info">
                         <h3 class="project-title">AlyaAloft PDF Explainer</h3>
                         <div class="project-tags">
-                            <span class="project-tag">Python</span>
                             <span class="project-tag">FastAPI</span>
                             <span class="project-tag">LLM</span>
-                            <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">NLP</span>
                             <span class="project-tag">Vector Search</span>
+                            <span class="project-tag">WebSockets</span>
                             <span class="project-tag">Document Analysis</span>
+                            <span class="project-tag">Parameter Optimization</span>
                         </div>
                         <p class="project-excerpt">A sophisticated PDF document analysis and question-answering application that leverages advanced AI models to provide detailed responses to user queries about PDF documents.</p>
                         <a href="alyaaloft.html" class="project-link">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
@@ -103,7 +102,6 @@
                             <span class="project-tag">MySQL</span>
                             <span class="project-tag">Prompt Engineering</span>
                             <span class="project-tag">SQL Automation</span>
-                            <span class="project-tag">Gemini API</span>
                         </div>
                         <p class="project-excerpt">An AI tool that transforms natural language into SQL queries, enabling non-technical users to access and query MySQL databases effortlessly and efficiently.</p>
                         <a href="nl2sql.html" class="project-link">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
@@ -119,10 +117,9 @@
                         <h3 class="project-title">AquaSense AI</h3>
                         <div class="project-tags">
                             <span class="project-tag">Django</span>
-                            <span class="project-tag">Python</span>
                             <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">Water Quality Analysis</span>
                             <span class="project-tag">IoT Integration</span>
+                            <span class="project-tag">Water Quality Analysis</span>
                             <span class="project-tag">API Integration</span>
                         </div>
                         <p class="project-excerpt">A Django-based water quality prediction system using multiple machine learning models that provides parameter assessment and treatment suggestions through both manual input and IoT sensor integration.</p>
@@ -141,7 +138,6 @@
                             <span class="project-tag">Python</span>
                             <span class="project-tag">Flask</span>
                             <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">Web Development</span>
                             <span class="project-tag">NLP</span>
                             <span class="project-tag">Text Analysis</span>
                             <span class="project-tag">Google Search API</span>
@@ -160,8 +156,6 @@
                         <h3 class="project-title">CodeX Drink Insights</h3>
                         <div class="project-tags">
                             <span class="project-tag">Power BI</span>
-                            <span class="project-tag">Data Analysis</span>
-                            <span class="project-tag">Data Visualization</span>
                             <span class="project-tag">Market Analysis</span>
                             <span class="project-tag">Consumer Insights</span>
                             <span class="project-tag">F&B Marketing</span>
@@ -182,8 +176,6 @@
                         <div class="project-tags">
                             <span class="project-tag">Python</span>
                             <span class="project-tag">Pandas</span>
-                            <span class="project-tag">Matplotlib</span>
-                            <span class="project-tag">Data Analysis</span>
                             <span class="project-tag">Retail Analytics</span>
                             <span class="project-tag">Promotional Analysis</span>
                             <span class="project-tag">Business Intelligence</span> 
