made some changes in certificates section

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <h2 class="section-title" data-aos="fade-up">Certificates</h2>
             <div class="certificates-grid">
 
-                <!-- Certificate 1 -->
+                <!-- SQL (Intermediate) -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="100">
                     <a href="https://www.hackerrank.com/certificates/93eeb1a9cd0f" target="_blank">
                         <img src="assets/certificates/sql_intermediate.png" alt="SQL Certificate" class="certificate-img">
@@ -435,7 +435,7 @@
                     <p style="margin-bottom: 10px;">SQL (Intermediate)</p>
                 </div>
 
-                <!-- Certificate 2 -->
+                <!-- Python Certificate -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="200">
                     <a href="https://www.hackerrank.com/certificates/af31a6ef0036" target="_blank">
                         <img src="assets/certificates/python_certificate.jpg" alt="Python Certificate" class="certificate-img">
@@ -443,12 +443,12 @@
                     <p style="margin-bottom: 10px;">Python Certificate</p>
                 </div>
 
-                <!-- Certificate 3 -->
+                <!-- ML Fundamentals -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="300">
-                    <a href="https://www.credly.com/badges/ef9bf812-4ed7-4dc0-8607-e1b974c55676" target="_blank">
-                        <img src="assets/certificates/alteryx_foundational.jpg" alt="Alteryx Foundational" class="certificate-img">
+                    <a href="https://www.credly.com/badges/4ba2cf1c-6202-4cf3-9fc5-0ff05cf06b75" target="_blank">
+                        <img src="assets/certificates/ml_fundamentals.jpg" alt="ML Fundamentals" class="certificate-img">
                     </a>
-                    <p style="margin-bottom: 10px;">Alteryx Foundational</p>
+                    <p style="margin-bottom: 10px;">ML Fundamentals</p>
                 </div>
             </div>
             
