added certificate again

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <!-- SQL (Intermediate) -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="100">
                     <a href="https://www.hackerrank.com/certificates/93eeb1a9cd0f" target="_blank">
-                        <img src="assets/certificates/sql_intermediate.png" alt="SQL Certificate" class="certificate-img">
+                        <img src="assets/certificates/sql_intermediate.png" alt="SQL (Intermediate)" class="certificate-img">
                     </a>
                     <p style="margin-bottom: 10px;">SQL (Intermediate)</p>
                 </div>
