--- a/pages/beast_certificates.html
+++ b/pages/beast_certificates.html
@@ -63,7 +63,7 @@
                 <!-- SQL (Intermediate) -->
                 <div class="certificate-card" data-category="programming" data-platform="hackerrank" data-aos="fade-up" data-aos-delay="100">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/sql_intermediate.png" alt="SQL Certificate">
+                        <img class="responsive-image" src="../assets/certificates/sql_intermediate.png" alt="SQL (Intermediate)">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">SQL (Intermediate)</h3>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">Machine Learning Fundamentals</h3>
-                        <p class="certificate-issuer">Credly</p>
+                        <p class="certificate-issuer">Alteryx (via Credly)</p>
                         <p class="certificate-date">Issued: December 2024</p>
                         <a href="https://www.credly.com/badges/4ba2cf1c-6202-4cf3-9fc5-0ff05cf06b75" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
@@ -102,7 +102,7 @@
                 <!-- SQL (Basic) -->
                 <div class="certificate-card" data-category="programming" data-platform="hackerrank" data-aos="fade-up" data-aos-delay="100">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/sql_basic.jpg" alt="SQL Certificate">
+                        <img class="responsive-image" src="../assets/certificates/sql_basic.jpg" alt="SQL (Basic)">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">SQL (Basic)</h3>
@@ -141,7 +141,7 @@
                 <!-- AWS Intro to Cloud Semester 2 -->
                 <div class="certificate-card" data-category="cloud" data-platform="aws" data-aos="fade-up" data-aos-delay="300">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/aws_intro_sem_2.jpg" alt="aws_intro_sem_2">
+                        <img class="responsive-image" src="../assets/certificates/aws_intro_sem_2.jpg" alt="AWS Intro to Sem 2">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">AWS Intro to Cloud Semester 2</h3>
