--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <div class="research-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="research-content">
                         <h3 class="research-title">Financial Analysis for Stock Pricing Using Machine Learning Algorithm</h3>
-                        <p class="research-journal"><img src="assets/icons/research-paper.svg" class="journal-icon" alt="Research Journal"> IJSRED, March 2024</p>
+                        <p class="research-journal"><img src="assets/icons/research-paper.svg" class="journal-icon" alt="Research Journal"> IJCRT, March 2024</p>
                         <a href="https://drive.google.com/file/d/1_BllU8Ihph4oYz91p4uNKwJacWzob4-M/view" class="btn btn-secondary">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
